# simmer

./: README.md
demo/: geom.xml
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/simmer/: CMakeLists.txt
src/simmer/share/: CMakeLists.txt
src/simmer/share/CDT/: CMakeLists.txt
src/simmer/share/fmt/: CMakeLists.txt
src/simmer/src/: actuator.cpp  actuator.hpp  augmenter.cpp  augmenter.hpp  finder.cpp  finder.hpp  geometry.cpp  geometry.hpp  mesher.cpp  mesher.hpp  parser.cpp  parser.hpp  partition.hpp  plotter.cpp  plotter.hpp  router.cpp  router.hpp  simmer.cpp  simmer.hpp  spawner.hpp  support.hpp  types.hpp  writer.cpp  writer.hpp
src/simmer/src/geometry/: cell.cpp  cell.hpp  line.cpp  line.hpp  point.cpp  point.hpp
